--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<p>Texit l, habere se indocti magnosque culpa gravioribus discedere eas indignae diogenem, praetermissum effugiendorum vult dicent, periculum dolere putat. Iucunditatem quid turbulenta patre eae depravatum talem elaborare plerisque repellere, o potiendi tuo aliter, militaris sint tranquillat liberalitati. Locus delicata divelli intemperantes audeam maximisque sitne pulcherrimum aegritudines studium. Habent inveniri fidelissimae aequi andriam laudabilis. Libido censet assiduitas quae probantur tantalo exquisitaque erunt laudatur optari. Late suapte veterum enim qui magna securi eaque proficiscuntur.</p>
 							</div>
 							<div class="col-md-6">
-								<img src="photos/about.jpg" alt="" class="img-responsive">
+								<img src="photos/ronda-bergman.jpg" alt="" class="img-responsive">
 							</div>
 						</div>
 
@@ -193,35 +193,28 @@
 					<div class="col-md-12">
 						<div class="section-title st-center">
 							<h3>What we do</h3>
-							<p>Avocent deditum long</p>
+							<p>Some of the things we do</p>
 						</div>
 						<div class="row">
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<div class="st-feature">
 									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
 									<strong class="st-feature-title">Company Evaluation</strong>
 									<p>We come to you, do a walk through of your office and observe your company. Let us help you uncover any environmental issues that could be driving diverse candidates away.</p>
 								</div>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<div class="st-feature">
 									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
 									<strong class="st-feature-title">Employee Survey</strong>
-									<p>We will draft and administer an anonymous survey to determine and report</p>
+									<p>We will draft and administer an anonymous survey to uncover any current issues.</p>
 								</div>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<div class="st-feature">
 									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
-									<strong class="st-feature-title">Company Evaluation</strong>
-									<p>We come to you, do a walk through of your office and observe your company. Let us help you uncover any environmental issues that could be driving diverse candidates away.</p>
-								</div>
-							</div>
-							<div class="col-md-3">
-								<div class="st-feature">
-									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
-									<strong class="st-feature-title">Company Evaluation</strong>
-									<p>We come to you, do a walk through of your office and observe your company. Let us help you uncover any environmental issues that could be driving diverse candidates away.</p>
+									<strong class="st-feature-title">Diversity Council</strong>
+									<p>Let us help you to ensure your efforts continue to progress even after we are done. We'll help you setup and set goals for your internal diversity council.</p>
 								</div>
 							</div>
 						</div>
@@ -230,7 +223,7 @@
 			</div>
 		</section>
 
-		<section class="features-desc">
+		<!--<section class="features-desc">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5">
@@ -243,9 +236,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
-		<section class="call-2-acction" data-stellar-background-ratio="0.4">
+		<!--<section class="call-2-acction" data-stellar-background-ratio="0.4">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -257,9 +250,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
-		<section class="testimonials">
+		<!--<section class="testimonials">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -303,9 +296,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
-		<section class="pricing" id="pricing">
+		<!--<section class="pricing" id="pricing">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -407,13 +400,13 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="faq-sec">
+		</section>-->
+		<!--<section class="faq-sec">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
 						<!-- <h2 class="tac">frequently asked questions</h2> -->
-						<div class="section-title st-center">
+						<!--<div class="section-title st-center">
 							<h3>Some questions</h3>
 							<p>frequently asked questions</p>
 						</div>
@@ -442,18 +435,18 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 		<section class="call-us">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
 						<h3>Let us help you diversify your workforce</h3>
-						<a href="#" class="btn btn-default-o btn-lg">Contact Us Now</a>
+						<a href="#contact" class="btn btn-default-o btn-lg">Contact Us Now</a>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="blog" id="blog">
+		<!--<section class="blog" id="blog">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -599,9 +592,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
-		<section class="subscribe">
+		<!--<section class="subscribe">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -624,7 +617,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
 		<section class="contact" id="contact">
 			<div class="container">
@@ -640,8 +633,8 @@
 					<div class="col-md-6">
 						<form class="contact-form" role="form">
 							<input type="text" class="form-control" id="fname" name="fname" placeholder="Your Full Name">
-							<input type="email" class="form-control" id="email" name="email" placeholder="Your E-mail">
-							<input type="text" class="form-control" id="subj" name="subj" placeholder="Your Subject">
+							<input type="email" class="form-control" id="email" name="email" placeholder="sales@ellavatec.com">
+							<input type="text" class="form-control" id="subj" name="subj" placeholder="Request for information">
 							<textarea id="mssg" name="mssg" placeholder="Your Message" class="form-control" rows="10"></textarea>
 							<button class="btn btn-main btn-lg" type="submit" id="send" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Sending..."><i class="fa fa-paper-plane "></i> Send</button>
 						</form>
@@ -650,10 +643,8 @@
 					<div class="col-md-6">
 						<p>Homines praetore aperiam aegritudine turpe quietus, amorem errore meo horreat triario quantus rectas tollitur. Infimum audiebamus saluto disciplina praetermittenda, aspernatur vocent firmitatem contenta eademque ibidem quales efficiat. Oblivione democriti, philosophorum philosopho, ordiamur sapiens iudex cyrenaicos similia, divitiarum panaetium. Tradere praetulerit, declarant scripserit doleamus iisque iudicabit aegritudo individua tractatas qua modice. Difficilius loqueretur improbe aetatis consectetur solis velint, grata quiddam partus occulta delectari maior, theseo eveniunt, turpius nesciunt amicitias constantia seque, utraque, statu genus scriptorem fugit fuissent duxit, compluribus primos scaevolam.</p>
 						<address>
-							<strong>Twitter, Inc.</strong><br>
-							795 Folsom Ave, Suite 600<br>
-							San Francisco, CA 94107<br>
-							<abbr title="Phone">P:</abbr> (123) 456-7890
+							<strong>EllaVatec</strong><br>
+							<strong>Ann Arbor, MI</strong><br>
 						</address>
 					</div>
 				</div>
@@ -664,10 +655,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						&copy; <a href="https://www.cantothemes.com">CantoThemes</a> 2015.
-						<!-- Don't Remove/Edit this. If you remove this you don't have permission to use this template. -->
-						Designed by <a href="https://www.cantothemes.com">CantoThemes</a>
-						<!-- So Please don't remove this -->
+						&copy; <a href="https://www.ellavatec.com">EllaVatec</a> 2017.
 					</div>
 				</div>
 			</div>
