--- a/index.html
+++ b/index.html
@@ -88,10 +88,30 @@
 						</div>
 						<div class="row mb90">
 							<div class="col-md-6">
-								<p>Texit l, habere se indocti magnosque culpa gravioribus discedere eas indignae diogenem, praetermissum effugiendorum vult dicent, periculum dolere putat. Iucunditatem quid turbulenta patre eae depravatum talem elaborare plerisque repellere, o potiendi tuo aliter, militaris sint tranquillat liberalitati. Locus delicata divelli intemperantes audeam maximisque sitne pulcherrimum aegritudines studium. Habent inveniri fidelissimae aequi andriam laudabilis. Libido censet assiduitas quae probantur tantalo exquisitaque erunt laudatur optari. Late suapte veterum enim qui magna securi eaque proficiscuntur.</p>
+								<p></br></br>
+									Diversity and inclusion are about creating a comfortable and welcoming work environment for everyone 
+									regardless of race, gender, sexual orientation, etc. Hiring diverse candidates without addressing 
+									culture issues will only result in unhappy employees and high turnover rates. Creating an inclusive 
+									organization is essential to recruiting and retaining a more diverse workforce.
+								</p>
 							</div>
 							<div class="col-md-6">
 								<img src="photos/ronda-bergman.jpg" alt="" class="img-responsive">
+							</div>
+						</div>
+
+						<div class="row mb90">
+							<div class="col-md-6">
+								<img src="photos/erin.png" alt="" class="img-responsive">
+							</div>
+							<div class="col-md-6">
+								<p></br></br>
+									A 2015 study by McKinsey & Company found that companies in the top quartile for gender or racial 
+									and ethnic diversity are more likely to have financial returns above their national industry medians.
+									A study released in 2016 by the Peterson Institute for International Economics concludes that there 
+									is a positive correlation between the presence of women in corporate leadership and performance 
+									<em>"in a magnitude that is not small."</em>
+								</p>
 							</div>
 						</div>
 
@@ -107,7 +127,7 @@
 										<div class="skills">
 											Based in Ann Arbor, Michigan, Ronda Bergman, the Founder and Lead Consultant at EllaVatec has over twenty years of experience in technology.
 											</br></br>
-											Often finding herself as a the only female developer at her workplace she is now seeking to solve this discrepancy by using her personal experience to help companies create a more inclusive and diverse workforce.
+											Often finding herself as the only female developer at her workplace she is now seeking to solve this discrepancy by using her personal experience to help companies create a more inclusive and diverse workforce.
 										</div>
 										<div class="st-member-social">
 											<ul>
@@ -192,14 +212,13 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="section-title st-center">
-							<h3>What we do</h3>
-							<p>Some of the things we do</p>
+							<p>What we do</p>
 						</div>
 						<div class="row">
 							<div class="col-md-4">
 								<div class="st-feature">
 									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
-									<strong class="st-feature-title">Company Evaluation</strong>
+									<strong class="st-feature-title">Culture Assesment</strong>
 									<p>We come to you, do a walk through of your office and observe your company. Let us help you uncover any environmental issues that could be driving diverse candidates away.</p>
 								</div>
 							</div>
@@ -207,13 +226,13 @@
 								<div class="st-feature">
 									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
 									<strong class="st-feature-title">Employee Survey</strong>
-									<p>We will draft and administer an anonymous survey to uncover any current issues.</p>
+									<p>We will draft and administer an anonymous survey to uncover any current issues and gadge the current state of inclusion of your company.</p>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="st-feature">
 									<div class="st-feature-icon"><i class="fa fa-cog"></i></div>
-									<strong class="st-feature-title">Diversity Council</strong>
+									<strong class="st-feature-title">Diversity Council </strong>
 									<p>Let us help you to ensure your efforts continue to progress even after we are done. We'll help you setup and set goals for your internal diversity council.</p>
 								</div>
 							</div>
@@ -641,7 +660,10 @@
 						<div id="result-message" role="alert"></div>
 					</div>
 					<div class="col-md-6">
-						<p>Homines praetore aperiam aegritudine turpe quietus, amorem errore meo horreat triario quantus rectas tollitur. Infimum audiebamus saluto disciplina praetermittenda, aspernatur vocent firmitatem contenta eademque ibidem quales efficiat. Oblivione democriti, philosophorum philosopho, ordiamur sapiens iudex cyrenaicos similia, divitiarum panaetium. Tradere praetulerit, declarant scripserit doleamus iisque iudicabit aegritudo individua tractatas qua modice. Difficilius loqueretur improbe aetatis consectetur solis velint, grata quiddam partus occulta delectari maior, theseo eveniunt, turpius nesciunt amicitias constantia seque, utraque, statu genus scriptorem fugit fuissent duxit, compluribus primos scaevolam.</p>
+						<p>
+							Located in beautiful Ann Arbor, Michigan. Home to the University of Michigan, a vibrant and active 
+							tech culture and many tech startups. <a href="http://madeina2.com/" target="_blank" />
+						</p>
 						<address>
 							<strong>EllaVatec</strong><br>
 							<strong>Ann Arbor, MI</strong><br>
