Correct minor css, and test

--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
 					</div>
 					<div class="col-md-6">
 						<p>
-							Located in beautiful Ann Arbor, Michigan. Home to the University of Michigan, a vibrant and active 
-							tech culture and many tech startups. <a href="http://madeina2.com/" target="_blank" />
+							Located in beautiful Ann Arbor, Michigan, home to the University of Michigan, a vibrant 
+							tech culture, and many tech startups. <a href="http://madeina2.com/" target="_blank" />
 						</p>
 						<address>
 							<strong>EllaVatec</strong><br>
